--- a/index.html
+++ b/index.html
@@ -12,4 +12,6 @@
 
 </body>
 <script type="text/javascript" src="script.js"> </script>
+<script type="text/javascript" src="conditional.js"> </script>
+<script type="text/javascript" src="function.js"> </script>
 </html>
