--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 
 
 </body>
-<script type="text/javascript" src="script.js"> </script>
-<script type="text/javascript" src="conditional.js"> </script>
-<script type="text/javascript" src="function.js"> </script>
+<!-- <script type="text/javascript" src="script.js"> </script> -->
+<!-- <script type="text/javascript" src="conditional.js"> </script> -->
+<!-- <script type="text/javascript" src="function.js"> </script> -->
+<!-- <script type="text/javascript" src="peramiter.js"> </script> -->
+<!-- <script type="text/javascript" src="global_variable.js"> </script> -->
+<!-- <script type="text/javascript" src="while.js"> </script> -->
+<!-- <script type="text/javascript" src="whiledo.js"> </script> -->
+<script type="text/javascript" src="forloop.js"> </script>
 </html>
