--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
 <!-- <script type="text/javascript" src="global_variable.js"> </script> -->
 <!-- <script type="text/javascript" src="while.js"> </script> -->
 <!-- <script type="text/javascript" src="whiledo.js"> </script> -->
-<script type="text/javascript" src="forloop.js"> </script>
+<!-- <script type="text/javascript" src="forloop.js"> </script> -->
+<script type="text/javascript" src="array.js"> </script>
 </html>
