--- a/JQuery_learning/index.html
+++ b/JQuery_learning/index.html
@@ -6,19 +6,28 @@
 	<title>Jquery</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+<header>
+ <h6 class="headertext">Hello</h6>
+</header>
 <body>
-
+	<p class="smalltext">This is the Paragraph</p>
+	<p class="smalltext">This is the Paragraph</p>
 	<p>This is the Paragraph</p>
 
+	<p class="bgorage">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum commodi iure aliquam error dolor, inventore consequatur veritatis, architecto similique reiciendis a quam cum accusantium numquam, expedita minus ratione omnis perferendis perspiciatis doloribus facilis. Ex, tempora? Autem illo eum tempore obcaecati nihil iste fugiat. Quia, iusto quibusdam facere perspiciatis id consectetur corporis saepe fugit tenetur sunt eveniet nam? Laborum eum dolores ex atque amet quas sequi numquam quis, cumque quod, cupiditate ab molestiae porro optio! Vel, natus expedita. Error quis quam quae! Recusandae dolorum fuga eligendi amet ex quasi! Ipsam repellendus harum iusto laboriosam, rem enim consequatur provident dignissimos dolorum explicabo nihil quae iure accusamus sequi blanditiis magni quo eaque veritatis asperiores corporis dolore minus labore at autem? Sapiente ea voluptas illum, culpa, a qui labore dolorem quis aliquid adipisci, nostrum eaque beatae vitae. Eaque, esse maxime. Natus id molestiae beatae odio itaque esse incidunt illo ipsa mollitia debitis animi voluptatum velit vitae cum, suscipit rerum aperiam, nisi minus quas qui inventore quia adipisci. Quibusdam nostrum, officiis adipisci aut soluta corporis, temporibus aspernatur dolores praesentium quisquam natus quidem! Minima unde id deleniti. Delectus cumque suscipit asperiores quia sapiente repellendus ratione, magni impedit deserunt labore nam. Magnam ipsam dignissimos debitis dolore voluptatum mollitia praesentium laborum dolorum dolor ex natus delectus eos, fuga ab deserunt expedita odio perspiciatis optio esse totam nobis a nisi? Eos est nemo at? Aspernatur, soluta blanditiis praesentium temporibus asperiores qui odit culpa mollitia fugiat vero hic magnam voluptatum nesciunt amet aperiam, possimus exercitationem inventore. Commodi fuga quaerat maxime animi similique sint recusandae ipsa, repellendus soluta accusamus magni amet doloribus minima distinctio placeat repellat illo sit aut delectus, harum error! Quo commodi quam rerum natus facilis nulla vitae unde consectetur cupiditate enim cumque quaerat itaque explicabo, totam dicta obcaecati nemo ratione corporis consequuntur dolore beatae, nostrum accusamus doloremque. Nihil?</p>
+
 	<ul>
-	  <li>list item 1</li>
+	  <li class="lihover">list item 1</li>
 	  <li>list item 2</li>
-	  <li>list item 3</li>
+	  <li class="lihover">list item 3</li>
 	  <li>list item 4</li>
-	  <li>list item 5</li>
+	  <li class="lihover">list item 5</li>
 	</ul>
 
-	<img src="https://i.pinimg.com/originals/7e/0a/50/7e0a507de8cf8b46e0f2665f1058ef37.jpg" alt="Cat_img">
+	<!-- <img style="border-radius: 10px;" src="https://i.pinimg.com/originals/7e/0a/50/7e0a507de8cf8b46e0f2665f1058ef37.jpg" alt="Cat_img"> -->
+
+	<img src="https://images.pexels.com/photos/7528169/pexels-photo-7528169.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="joker_pic">
+	
 	<br>
 	<button type="button">Make Me Big!</button>
 
@@ -28,6 +37,12 @@
 <!-- <script type="text/javascript" src="app.js"></script> -->
 <!-- <script type="text/javascript" src="fadeout.js"></script> -->
 <!-- <script type="text/javascript" src="filter.js"></script> -->
-<script type="text/javascript" src="image.js"></script>
+<!-- <script type="text/javascript" src="image.js"></script> -->
+<!-- <script type="text/javascript" src="onClick.js"></script> -->
+<!-- <script type="text/javascript" src="hover.js"></script> -->
+<!-- <script type="text/javascript" src="append.js"></script> -->
+<!-- <script type="text/javascript" src="fadeIn.js"></script> -->
+<!-- <script type="text/javascript" src="manipulate.js"></script> -->
+<script type="text/javascript" src="remove.js"></script>
 </body>
 </html>
